@@ -1,5 +1,10 @@
 2010-01-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* normal/cmdline.c (grub_cmdline_get): Fix completion in the middle
+	of the line.
+
+2010-01-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* kern/disk.c (grub_disk_read): Fix offset computation when reading
 	last sectors.
 
